# car-monitoring-web-api

./: Dockerfile  car_monitoring_sudoers  docker-compose.yml  requirements.txt  setup.cfg  setup.py  start.sh
car_monitoring_web_api/: app.py  cmd.py  views.py
car_monitoring_web_api/db/migration/: cli.py
car_monitoring_web_api/db/sqlalchemy/: models.py
