[metadata]
name = car-monitoring-web-api
version = 0.1
summary = Web api for collecting data from consumers
description-file =
    README.rst
classifier =
    Framework :: Pyramid
    Intended Audience :: Manufacturing
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.0
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: Scientific/Engineering :: Visualization

[files]
packages =
    car_monitoring_web_api

[entry_points]
console_scripts =
    car-monitoring-db-manage = car_monitoring_web_api.cmd:db_manage
    car-monitoring-web-api = car_monitoring_web_api.cmd:api
